tests/machine/x/ocaml/group_items_iteration.error
File "/tmp/TestOCamlCompiler_VMValid_Goldengroup_items_iteration2711768295/001/group_items_iteration.ml", line 39, characters 2-18:
39 |   List.rev !__res0)
       ^^^^^^^^^^^^^^^^
Error: This expression has type (string, record1) group list
       but an expression was expected of type
         (Obj.t, (string * Obj.t) list) group list
       Type string is not compatible with type Obj.t 
